# mocked-segments-generator-rust

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: add-artifacts-to-tag.yml  audit-check.yml  clippy-check.yml  delivery.yml  security-audit.yml
src/: main.rs
